[package]
name = "wrm"
version = "0.1.0"
authors = ["p1486 xzstd099@protonmail.com"]
description = "A file delition utility."
license = "MIT OR Apache-2.0"
repository = "https://github.com/p1486/wrm"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace", "std"] }
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
filey = "0.3.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
